@@ -1,3 +1,8 @@
+2010-06-26  Richard Guenther  <rguenther@suse.de>
+
+	PR middle-end/44674
+	* gcc.dg/pr44674.c: New testcase.
+
 2010-06-25  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	PR fortran/44448
